--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -91,5 +92,9 @@ dependencies {
     //https://github.com/enbandari/ObjectPropertyDelegate
     api "com.bennyhuo.kotlin:opd:1.0-rc-2"
 
+    //圆形头像 https://github.com/hdodenhof/CircleImageView
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
+//    //Json 动画 Lottie
+    api 'com.airbnb.android:lottie:2.0.0-beta4'
 }
