--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'kotlin-kapt'
 
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "github.nixo.com.github"
         minSdkVersion 21
@@ -28,73 +28,53 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     api 'org.slf4j:slf4j-api:1.7.21'
-
-
     api 'io.reactivex:rxandroid:1.2.1'
     api 'io.reactivex:rxjava:1.1.6'
-
     api 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     api 'com.squareup.okhttp3:okhttp:3.8.0'
-
-
     api "org.jetbrains.anko:anko-commons:$anko_version"
     api "org.jetbrains.anko:anko-sdk15:$anko_version"
     api "org.jetbrains.anko:anko-sdk15-listeners:$anko_version"
     api "org.jetbrains.anko:anko-sdk15-coroutines:$anko_version"
     api "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
     api "org.jetbrains.anko:anko-appcompat-v7-listeners:$anko_version"
-
-
     api 'com.squareup.retrofit2:converter-gson:2.3.0'
     api 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
     api 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:1.0.0'
-
     api 'com.google.code.findbugs:jsr305:3.0.1'
-
     api 'com.github.tony19:logback-android-core:1.1.1-6'
     api('com.github.tony19:logback-android-classic:1.1.1-6') {
         // workaround issue #73
         exclude group: 'com.google.android', module: 'android'
     }
-
     api 'cn.carbs.android:AvatarImageView:1.0.4'
-
     api 'com.bennyhuo.tieguanyin:tieguanyin-runtime:1.0-beta'
     kapt 'com.bennyhuo.tieguanyin:tieguanyin-compiler:1.0-beta'
-
     /* 源码地址：https://github.com/enbandari/RichText；这个项目是从 https://github.com/zzhoujay/RichText 修改而来的
-   <p>原因：原框架使用了  Android 系统的 Html 解析器，对 pre 和 code 没有支持
-   框架中使用了修改自 https://github.com/Pixplicity/HtmlCompat 的 Html 解析器
-    */
-
-
+       <p>原因：原框架使用了  Android 系统的 Html 解析器，对 pre 和 code 没有支持
+       框架中使用了修改自 https://github.com/Pixplicity/HtmlCompat 的 Html 解析器
+        */
     api 'com.github.bumptech.glide:glide:4.3.1'
     kapt 'com.github.bumptech.glide:compiler:4.3.1'
-
-
-
     api 'com.android.support:multidex:1.0.1'
-
     //https://github.com/enbandari/SwipeFinishableActivity
-    api "com.bennyhuo.swipefinishable:swipefinishable:1.0-rc2"
-
+    api 'com.bennyhuo.swipefinishable:swipefinishable:1.0-rc2'
     //https://github.com/enbandari/ObjectPropertyDelegate
-    api "com.bennyhuo.kotlin:opd:1.0-rc-2"
-
+    api 'com.bennyhuo.kotlin:opd:1.0-rc-2'
     //圆形头像 https://github.com/hdodenhof/CircleImageView
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-
-//    //Json 动画 Lottie
+    //    //Json 动画 Lottie
     api 'com.airbnb.android:lottie:2.0.0-beta4'
+    // 基于Kotlin1.7的Dialog
+    implementation 'com.github.q876625596:GenjiDialogV2:1.1.7'
 }
