--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,9 @@ dependencies {
     api 'com.airbnb.android:lottie:2.0.0-beta4'
     // 基于Kotlin1.7的Dialog
     implementation 'com.github.q876625596:GenjiDialogV2:1.1.7'
+
+    //Grilde 图片框架
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
 }
