--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,7 @@ dependencies {
     //https://github.com/enbandari/ObjectPropertyDelegate
     api 'com.bennyhuo.kotlin:opd:1.0-rc-2'
     //圆形头像 https://github.com/hdodenhof/CircleImageView
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'cn.carbs.android:AvatarImageView:1.0.4'
     //    //Json 动画 Lottie
     api 'com.airbnb.android:lottie:2.0.0-beta4'
     // 基于Kotlin1.7的Dialog
@@ -82,6 +82,8 @@ dependencies {
 
     //Grilde 图片框架
     implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-
+    //圆形头像
+    api 'cn.carbs.android:AvatarImageView:1.0.4'
+    //透明状态栏
+    implementation 'com.yanzhenjie:sofia:1.0.5'
 }
