--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         android:theme="@style/AppTheme">
         <activity
             android:name="github.nixo.com.MVP.View.auth.LoginActivity"
-            android:label="Login"></activity>
+            android:label="Login">
+
+        </activity>
         <activity android:name="github.nixo.com.MVP.View.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
