--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,7 @@ dependencies {
     api 'jp.wasabeef:glide-transformations:2.0.2'
     // 使用GPU（可以 不用）
     implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
+    //分页工具
+    api 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4'
+    api 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.4'
 }
