--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             </intent-filter>
         </activity>
         <activity android:name="github.nixo.com.MVP.View.auth.RegisterActivity" />
-        <activity android:name="github.nixo.com.MVP.View.auth.EditUserActivity"></activity>
+        <activity android:name="github.nixo.com.MVP.View.auth.UserActivity"></activity>
     </application>
 
 </manifest>
