--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,9 +93,11 @@ dependencies {
     implementation 'com.github.q876625596:GenjiDialogV2:1.1.7'
 
     //Grilde 图片框架
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    kapt 'com.github.bumptech.glide:compiler:4.8.0'
-    annotationProcessor  'com.github.bumptech.glide:compiler:4.8.0'
+//    implementation 'com.github.bumptech.glide:glide:4.8.0'
+//    kapt 'com.github.bumptech.glide:compiler:4.8.0'
+//    annotationProcessor  'com.github.bumptech.glide:compiler:4.8.0'
+    api 'com.github.bumptech.glide:glide:4.0.0-RC0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
     //圆形头像
     api 'cn.carbs.android:AvatarImageView:1.0.4'
     //透明状态栏
