--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,9 +93,6 @@ dependencies {
     implementation 'com.github.q876625596:GenjiDialogV2:1.1.7'
 
     //Grilde 图片框架
-//    implementation 'com.github.bumptech.glide:glide:4.8.0'
-//    kapt 'com.github.bumptech.glide:compiler:4.8.0'
-//    annotationProcessor  'com.github.bumptech.glide:compiler:4.8.0'
     api 'com.github.bumptech.glide:glide:4.0.0-RC0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
     //圆形头像
@@ -108,15 +105,7 @@ dependencies {
     //分页工具
     api 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4'
     api 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.4'
-
-
-    //Test Paging
-    def paging_version = "1.0.0"
-
-    implementation "android.arch.paging:runtime:$paging_version"
-
-    // alternatively - without Android dependencies for testing
-    testImplementation "android.arch.paging:common:$paging_version"
-
+//其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.2.0
+    api 'com.tencent.bugly:crashreport:latest.release'
 
 }
