--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,6 +109,7 @@ dependencies {
     api 'com.android.support:cardview-v7:28.0.0'
     //文件下载器
     api 'com.github.liuguangli:downloaderlibrary:-SNAPSHOT'
-
+    //CodeView~
+    api 'com.github.kbiakov:CodeView-android:1.3.1'
 
 }
